# language-model-arithmetic

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/datasets/: IMDB_processed.csv  alpaca_processed.csv  jigsaw_balanced_processed.csv  pol.csv
mapping/: jigsaw_balanced_indices.txt
scripts/: askgpt4_sentiment.py  askgpt4_toxic.py  evaluate_lm_eval.py  evaluate_persona.py  evaluate_perspective.py  evaluate_sentiment.py  evaluate_speed.py  evaluate_toxicity.py  examples.py  finetune.py  formulas_sentiment.py  formulas_toxicity.py  main.sh  optimization.py  postprocess.py  preprocess.py
src/model_arithmetic/: __init__.py  base.py  basic_model_loader.py  dataset.py  evaluation.py  input.py  lm_eval_compatibility.py  model_arithmetic.py  monitor.py  openaiquery.py  operators.py  retroactive_operators.py  runnable_operators.py  top_k_top_p_filtering.py  utils.py
